# sciplot

./: .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Launch_Plotter.command  Launch_Plotter_Legacy.command  Launch_SciPlot.command  README.md  SECURITY.md  example_plot.py  interactive_plot.py  make_plot.py  plot_real_data.py  plot_wizard_gui.py  pyproject.toml  requirements-constraints.txt  requirements.txt
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: main.json
app/desktop/src-tauri/src/: main.rs
docs/: data-to-template-v1-handoff.md  design-system-rules.md  engineering-handoff.md  gui-borrowing-spec.md  labplot-informed-roadmap.md  labplot-roadmap-progress.md  labplot-technical-borrowing.md  macos-distribution-readiness.md  macos-frontend-design.md  maintenance-governance.md  plot_contract.md  product-architecture.md  sciplot-screen-rules.md  sidecar-api.md  ui-ux-audit-2026-04-29.md
examples/: curve_table.csv  replicate_table.csv
scripts/: benchmark_workbench_perf.py  blocking_gate.py  check_labplot_cleanroom.py  check_macos_distribution_readiness.py  check_macos_gui_presentation.py  clean_repo.py  debug_refresh.py  generate_app_icon.py  generate_plot_contract_docs.py  manual_smoke_evidence.py  smoke_check.py
src/: code_console_runner.py  code_console_runtime.py  code_console_service.py  composer.py  composer_assets.py  composer_export.py  composer_imports.py  composer_ops.py  composer_preflight.py  composer_preview.py  composer_project.py  composer_qa.py  (+21 more)
(+462 files in other folders)
