[package]
name = "sciplot-god-desktop"
version = "5.0.0"
description = "SciPlot God desktop"
authors = ["SciPlot God"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
